@@ -1,3 +1,8 @@
+2004-06-21  Sam Steingold  <sds@gnu.org>
+
+	* modules/berkeley-db/bdb.c (BDB:ENV-GET-OPTIONS): new Lisp DEFUN
+	(env_verbose, env_tmp_dir, env_data_dirs): new functions
+
 2004-06-06  Bruno Haible  <bruno@clisp.org>
 
 	* clos-genfun2.lisp (compute-applicable-methods-effective-method): Do
